# Convex_Hull_Finding_App

./: README.md  example_data.txt
ConvexHullFinding/: .gitignore  CMakeLists.txt  clean_up.sh
ConvexHullFinding/App/: CMakeLists.txt  algorithmthread.cpp  algorithmthread.h  forvis.cpp  forvis.h  graham.cpp  graham.h  indexandcolor.cpp  indexandcolor.h  main.cpp  mainwindow.cpp  mainwindow.h  pairhash.cpp  pairhash.h  pointslog.cpp  pointslog.h
